--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -207,9 +207,11 @@ A shell script with shell comments that are directives to the sheduler about how
 ```bash
 #!/bin/bash
 #SBATCH --account=TRAINING-CPU 
-#SBATCH --reservation=
+#SBATCH --reservation=iccs-summer-school1
 #SBATCH --time=00:02:00
 #SBATCH --job-name=my-first-job
+#SBATCH --nodes=1
+#SBATCH --cores=1
 
 echo "My first job - hooray"
 ```
@@ -227,7 +229,10 @@ You will get back a Job ID.
 
 ## Job Output
 
-If you don't specify, by df
+If you don't specify, by default it will be called
+```slurm-<$JOBID>.out```
+
+To change this you can add an extra directive ``#SBATCH --output=``
 
 ## Exercise 2
 
@@ -235,7 +240,19 @@ If you don't specify, by df
 - Submit the job with ``sbatch``
 - See it in the queue with ``squeue --me`
 - Find the output in te directory you submitted it from ``ls -lrt``
-- Examine the output ``cat ``
+- Examine the output using ``cat ``
+
+## Exercise 3
+
+- add in the unix command ``sleep 60``
+- find you job in the queue with ``squeue --me``
+- kill it with ``scancel <JOBID>``
+
+## Exercise 4
+
+- change the sleep to 180 seconds
+- reduce the job request time to 1 minute
+- see what happens
 
 ## modules
 
