--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Introduction to High Performance Computing"
 subtitle: "ICCS Summer School 2025"
+output-file: index
 bibliography: references.bib
 format:
   revealjs:
