--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -16,7 +16,10 @@ format:
 authors:
   - name: Chris Edsall
     affiliations: ICCS/Cambridge
-    orcid: 0000-0001-6863-2184§
+    orcid: 0000-0001-6863-2184
+  - name: Tom Meltzer
+    orcid: 0000-0003-1740-9550
+    affiliations: Senior Research Software Engineer <br> ICCS - University of Cambridge
   
 revealjs-plugins:
   - attribution
