--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -309,9 +309,23 @@ To change this you can add an extra directive ``#SBATCH --output=``
   - openMP GPU offloading
   - [openAcc](https://www.openacc.org/)
 
-## the bad news amdhals law
+## The bad news: Amdahal's law
 
-## the good news Metcalf's law
+$S = 1 / (1 - p + p/s)$, where…
+
+- $S$ is the speedup of a process
+- $p$ is the proportion of a program that can be made parallel, and
+- $s$ is the speedup factor of the parallel portion. 
+
+## Amdahal's Law
+
+![](imgs/AmdahlsLaw.svg.png)
+
+## The good news: Gustafson's law
+
+- Mitigates the drawbacks of Amdahl's Law
+- Scale the problem size as you scale the number of nodes
+
 
 ## debugging
 
