--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -354,19 +354,27 @@ int main() {
   return 0;
 }
 ```
-
+Build with
+```{.bash}
+$ gcc -fopenmp -O3 hello.c -o hello.exe
+```
 ---
 
 ### hello OpenMP
 
-What happens when we run the following code?
+- Can you predict what the output will be with 4 threads?
 
-```{.bash}
-$ gcc -fopenmp -O3 hello.c -o hello.exe
-$ ./hello.exe
-```
+::: {.callout-note}
+## Note
+To change the number of threads we need to set environment variable `OMP_NUM_THREADS` e.g., `export OMP_NUM_THREADS=1` 
+:::
 
 ---
+
+### Exercise 7
+
+- Build the OpenMP hello world 
+- Run with varying numbers of threads
 
 ### hello OpenMP
 
@@ -392,12 +400,20 @@ hello from process 2
 cd example-code
 gcc -fopenmp -O3 pi.c -o pi.exe
 ```
-- What happens when you run with different numbers of threads?
 
-::: {.callout-note}
-## Note
-To change the number of threads we need to set environment variable `OMP_NUM_THREADS` e.g., `export OMP_NUM_THREADS=1` 
-:::
+### What might be causing this?
+
+- The problem is "pleasingly parallel"
+- Process pinning
+- NUMA
+  - Non-unifrom memory architecture
+  - differing latencies from cores to main memory
+- First touch placement policy.
+
+### ls-topo
+
+![](imgs/lstopo-login-q.png)
+
 
 ## programming HPC
 ### distributed (multi-node)
@@ -406,6 +422,10 @@ To change the number of threads we need to set environment variable `OMP_NUM_THR
 - One of the most common methods of distributed compute
 - **Distributed memory** multiprocessing programming model
 - Implementations (openMPI, MPICH, Intel MPI)
+
+### Exercise 8
+
+
 
 ## programming HPC
 ### GPU offloading
