--- a/slides/slides.qmd
+++ b/slides/slides.qmd
@@ -423,9 +423,60 @@ gcc -fopenmp -O3 pi.c -o pi.exe
 - **Distributed memory** multiprocessing programming model
 - Implementations (openMPI, MPICH, Intel MPI)
 
+---
+
+### MPI Hello World
+
+```c
+#include <mpi.h>
+#include <stdio.h>
+
+int main(int argc, char** argv) {
+    // Initialize the MPI environment
+    MPI_Init(NULL, NULL);
+
+    // Get the number of processes
+    int world_size;
+    MPI_Comm_size(MPI_COMM_WORLD, &world_size);
+
+    // Get the rank of the process
+    int world_rank;
+    MPI_Comm_rank(MPI_COMM_WORLD, &world_rank);
+
+    // Get the name of the processor
+    char processor_name[MPI_MAX_PROCESSOR_NAME];
+    int name_len;
+    MPI_Get_processor_name(processor_name, &name_len);
+
+    // Print off a hello world message
+    printf("Hello world from processor %s, rank %d out of %d processors\n",
+           processor_name, world_rank, world_size);
+
+    // Finalize the MPI environment.
+    MPI_Finalize();
+} 
+```
+---
+
+### Building MPI PRograms
+
+Build:
+
+```bash
+mpicc mpi-hello.c -o mpi-hello.exe
+```
+
+Run a small test on login node:
+
+```
+mpiexec -np 4 ./mpi-hello.exe
+```
+
 ### Exercise 8
 
-
+- Build ``mpi-hello.c``
+- Write a job script to run on 2 nodes, 3 cores per node
+  - (np whouls be 2*3 = 6)
 
 ## programming HPC
 ### GPU offloading
